Backporting PR#121 (rebased through #141)

--- a/resource/cassandra-reaper.yaml
+++ b/resource/cassandra-reaper.yaml
@@ -11,6 +11,7 @@ repairRunThreadCount: 15
 hangingRepairTimeoutMins: 30
 storageType: memory
 enableCrossOrigin: true
+incrementalRepair: false
 
 logging:
   level: INFO
