--- a/src/test/resources/cassandra-reaper.yaml
+++ b/src/test/resources/cassandra-reaper.yaml
@@ -17,6 +17,8 @@ hangingRepairTimeoutMins: 30
 # You can also use value 0 for scheduleDaysBetween, for continuous repairs.
 scheduleDaysBetween: 7
 
+incrementalRepair: false
+
 # storageType is either "database" or "memory"
 storageType: memory
 
