--- a/resource/cassandra-reaper.yaml
+++ b/resource/cassandra-reaper.yaml
@@ -13,6 +13,10 @@ storageType: memory
 enableCrossOrigin: true
 incrementalRepair: false
 
+# The default jmx port used by the reaper
+# jmxPorts mapping will override this if specified
+defaultJmxPort: 7199
+
 logging:
   level: INFO
   loggers:
